force-app/main/default/objects/Deal_Request__c/Deal_Request__c.object-meta.xml
<CustomObject>
    <description>Sales deal discount request with approval routing, margin visibility, and policy status.</description>
    <label>Deal Request</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Deal Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>