force-app/main/default/objects/Deal_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>