force-app/main/default/objects/Deal_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Requests_As_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>