force-app/main/default/objects/Deal_Request__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>Growth</fullName><default>false</default><label>Growth</label></value>
            <value><fullName>Strategic</fullName><default>false</default><label>Strategic</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>