force-app/main/default/objects/Deal_Request__c/fields/Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Amount__c</fullName>
    <label>Deal Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>