force-app/main/default/objects/Deal_Request__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Qualification</fullName><default>false</default><label>Qualification</label></value>
            <value><fullName>Negotiation</fullName><default>true</default><label>Negotiation</label></value>
            <value><fullName>Procurement</fullName><default>false</default><label>Procurement</label></value>
            <value><fullName>Legal Review</fullName><default>false</default><label>Legal Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>