force-app/main/default/objects/Deal_Request__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>