force-app/main/default/objects/Deal_Request__c/fields/Delivery_Cost__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Cost__c</fullName>
    <label>Delivery Cost</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>