force-app/main/default/objects/Deal_Request__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>