force-app/main/default/objects/Deal_Request__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>Deal_Amount__c * (1 - (Discount_Percent__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>