force-app/main/default/objects/Deal_Request__c/fields/Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percent__c</fullName>
    <formula>IF(Deal_Amount__c = 0, 0, ((Deal_Amount__c * (1 - (Discount_Percent__c / 100)) - Delivery_Cost__c) / (Deal_Amount__c * (1 - (Discount_Percent__c / 100)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>