force-app/main/default/objects/Deal_Request__c/fields/Last_Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Decision_By__c</fullName>
    <label>Last Decision By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>