force-app/main/default/objects/Deal_Request__c/fields/Required_Approver__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver__c</fullName>
    <label>Required Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Auto Approved</fullName><default>true</default><label>Auto Approved</label></value>
            <value><fullName>Sales Manager</fullName><default>false</default><label>Sales Manager</label></value>
            <value><fullName>Regional Director</fullName><default>false</default><label>Regional Director</label></value>
            <value><fullName>Finance Controller</fullName><default>false</default><label>Finance Controller</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>