force-app/main/default/objects/Deal_Request__c/validationRules/Discount_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Discount_Percent__c &lt; 0, Discount_Percent__c &gt; 45)</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>Discount must be between 0% and 45%.</errorMessage>
</ValidationRule>