force-app/main/default/objects/Deal_Request__c/validationRules/Discount_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Discount_Percent__c &gt; 10, ISBLANK(Discount_Reason__c))</errorConditionFormula>
    <errorDisplayField>Discount_Reason__c</errorDisplayField>
    <errorMessage>Discount reason is required when discount is above 10%.</errorMessage>
</ValidationRule>